Otros Cambios tags.html

--- a/tags.html
+++ b/tags.html
@@ -11,6 +11,7 @@
         <nav></nav>
     </header>
     <main>
+        <h1>TAGS HTML5</h1>
         <ul>
             <li>HEADER : Cabecera del elemento que lo contenga</li>
             <li>FOOTER : Pie de pagina del elemento que lo contenga</li>
@@ -25,16 +26,19 @@
         </ul>
     </main>
     <section>
+        <h2>Articulos</h2>
         <article>
-            <header></header>
+            <header>
+                <h3>Titulo</h3>
+            </header>
             <p>Lorem  <mark>ipsum dolor sit amet consectetur adipisicing elit.</mark> Inventore doloremque consequuntur soluta minima praesentium, laborum cupiditate voluptates asperiores dolorum omnis voluptatem. Cum ducimus reprehenderit, culpa quibusdam omnis expedita natus pariatur.</p>
             <footer></footer>
         </article>
-        <article>
-            <figure></figure>
+        <figure>
             <figcaption>Imagen 01</figcaption>
-        </article>
+        </figure>            
         <article>
+            <h3>Titulo</h3>
             <video src=""></video>
         </article>
     </section>
